[gd_scene load_steps=3 format=2]

[ext_resource path="res://BasicBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://PlayerBlock.gd" type="Script" id=2]

[node name="PlayerBlock" type="Node"]
script = ExtResource( 2 )

[node name="PivotA" type="Spatial" parent="."]

[node name="BasicBlock" parent="PivotA" groups=["active"] instance=ExtResource( 1 )]

[node name="PivotB" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="BasicBlock" parent="PivotB" groups=["active"] instance=ExtResource( 1 )]
